# hh_api

./: pyproject.toml
src/: api_vacancies.py  hh.py  json_vacancy_saver.py  utils.py  vacancy.py  vacancy_saver.py
tests/: test_hh.py  test_json_vacancy_saver.py  test_utils.py  test_vacancy.py
